# ft232h_mpsse

./: CMakeLists.txt  FT232H_BME280.c  FT232H_DRV.cpp  FT232H_GPIO.cpp  FT232H_LSM6.cpp  FT232H_MAX.cpp  FT232H_UART.cpp  hal_types.h
libMAX17055/: CMakeLists.txt  MAX17055.c  MAX17055.h  hal_i2c.h
libMAX17055/external_headers/: hal_types.h
libMPSSE/: .gitignore  CMakeLists.txt  README.md
libMPSSE/example/SPI/: CMakeLists.txt  sample_spi.c
libMPSSE/inc/: libMPSSE_i2c.h  libMPSSE_spi.h
libMPSSE/inc/linux/: ftd2xx.h
libMPSSE/inc/win32/: ftd2xx.h
libMPSSE/src/: ftdi_infra.c  ftdi_infra.h  ftdi_mid.c
libMPSSE_1.0.3/: CMakeLists.txt
libMPSSE_1.0.3/inc/: libmpsse_i2c.h
libMPSSE_1.0.3/libftd2xx/: ftd2xx.h
libMPSSE_1.0.3/src/: ftdi_i2c.c  ftdi_infra.c  ftdi_infra.h  ftdi_mid.c  ftdi_mid.h
lsm6ds3tr-c-pid/: CMakeLists.txt  hal_i2c.h  lsm6ds3_wrapper.c  lsm6ds3_wrapper.h
lsm6ds3tr-c-pid/external_headers/: hal_types.h
